--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
 PORT=5000
 MongoDB_URI="mongodb+srv://Assignements:Assignements@cluster0.wotx1dw.mongodb.net/mernstack?retryWrites=true&w=majority"
+NODE_ENV=development
+JWT_SECRET_KEY=Sravani12345
